; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/dec/extr_ioasic-irq.c_mask_ioasic_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/dec/extr_ioasic-irq.c_mask_ioasic_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IO_REG_SIMR = common dso_local global i32 0, align 4
@ioasic_irq_base = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mask_ioasic_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mask_ioasic_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @IO_REG_SIMR, align 4
  %5 = call i32 @ioasic_read(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @ioasic_irq_base, align 4
  %8 = sub i32 %6, %7
  %9 = shl i32 1, %8
  %10 = xor i32 %9, -1
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* @IO_REG_SIMR, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @ioasic_write(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @ioasic_read(i32) #1

declare dso_local i32 @ioasic_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
